--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -1,6 +1,6 @@
 <div class="contents" ng-controller="GeoliftCtrl">
-	<h3 class="green bold">GeoLift</h3>
-	<b>Framework to enrich geographic content in the Semantic Web</b>
+	<h3 class="green bold">TripleGeo</h3>
+	<b>Utility for converting geospatial data into triples</b>
 	<br>
 	<br>
 	<p>To get started either upload a configuration file or fill in the configuration options.</p>
