--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -281,43 +281,15 @@
 	    <label for="AcceptedResults">Accepted Results</label>
 	    <textarea class="form-control" id="AcceptedResults" ng-model="limes.acceptedResults"></textarea>
 	</div>
+	<br>
+	<br>
+	<div class="row">
+	<div class="col-xs-12">
+		<div class="col-xs-2 pull-left" style="padding-left:0">
+			  <a class="btn btn-sm btn-success btn-block" onclick="location.reload()">Restart</a>
+		</div>
+	</div>
+	</div>
 </form>
 	
 </div>
-
-<!-- 
-<div ng-controller="ModalWindow">
-    <a data-toggle="modal" href="#modalWindow" class="btn btn-primary btn-large" ng-click="open()">Launch demo modal</a>
-    <div id="modalWindow" class="modal">
-        <div class="modal-header">
-            <h4>LIMES</h4>
-        </div>
-        <div class="modal-body">
-            <iframe id="ow-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-warning cancel" ng-click="close()">Close</button>
-        </div>
-    </div>
-</div>
-
-<div ng-controller="ModalWindow">
-	<h3 class="green bold">LIMES - SAIM</h3>
-    <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch LIMES</a>
-
-  <!-- Modal -->
-  <!--  
-  <div class="modal fade" id="modalWindow">
-        <div class="modal-header">
-          <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
-          <h5 class="modal-title green bold">LIMES - SAIM</h5>
-        </div>
-        <div class="modal-body">
-        <iframe id="mod-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn-sm btn-success" ng-click="close()">Close</button>
-        </div>
-  </div>
-  </div>
-   -->
