--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -179,7 +179,7 @@ a.accordion-toggle:hover{
 /* Selects */
 
 #DataSet {
-   background-color: #FFFFFF;
+    background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
     border-radius: 4px 4px 4px 4px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
@@ -192,4 +192,20 @@ a.accordion-toggle:hover{
     transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
     vertical-align: middle;
     width: 100%;
+}
+
+/* Buttons */
+
+.plusbutton{
+	padding-right: 6px;
+	padding-left: 6px;
+	padding-top: 1px;
+	color: #CCCCCC;
+	font-size: 12px;
+}
+
+.plusbutton:hover{
+	cursor: pointer;
+	color: #000000;
+	opacity:0.5;
 }
