modified facete and virtuoso to read from settings, and fixed the modal window

--- a/src/main/webapp/partials/settings/components.html
+++ b/src/main/webapp/partials/settings/components.html
@@ -8,7 +8,7 @@
   <tr>
   	<th>URI</th>
     <th>Name</th>
-    <th>Service URL</th>
+    <th>Homepage</th>
     <th>Version</th>
   </tr>
 </thead>
@@ -16,7 +16,7 @@
   <tr ng-repeat="component in components">
   	<td>{{component.uri}}</td>
     <td>{{component.label}}</td>
-    <td>{{component.url}}</td>
+    <td>{{component.homepage}}</td>
     <td>{{component.version}}</td>
   </tr>
 </tbody>
