--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -1,39 +1,38 @@
-<div ng-controller="ModalWindow">
-	
-  <div class="col-lg-8">
-	<h3 class="green bold">Facete</h3>
-	
-    <b>A tool for exploring (geographical) Linked Data datasets on the Web</b>
-    <br>
-    <br>
-    <p>To get started select a data set from the drop down menu.</p>
-	  <form class="form-horizontal InputForm" role="form" ng-controller="FaceteFormCtrl">
-      <div class="form-group">
-        <label for="ServiceURI">Service URI</label>
-        <input type="url" class="form-control" id="ServiceURI" disabled="disabled" ng-model="facete.service"></input>
-	    </div>
-	    <div class="form-group">
-        <label for="DataSet">DataSet</label>
-        <select id="DataSet" class="form-control" ng-model="facete.dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
-        </select>
-      </div>
-      <div class="form-group">
-        <a class="btn btn-success btn-large" ng-click="setUrl(); OpenFullWindow('modalWindow')">Launch Facete</a>
-      </div>
-    </form>
-	</div>
+
+<div class="col-lg-8" ng-controller="FaceteFormCtrl">
+  <h3 class="green bold">Facete</h3>
+
+  <b>A tool for exploring (geographical) Linked Data datasets on the Web</b>. More about this tool <a href="{{component.homepage}}" target="_blanc">here</a>.
+  <br>
+  <br>
+  <p>To get started select a data set from the drop down menu.</p>
+  <form class="form-horizontal InputForm" role="form" >
+    <div class="form-group">
+      <label for="Endpoint">Endpoint</label>
+      <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="facete.service"></input>
+    </div>
+    <div class="form-group">
+      <label for="DataSet">DataSet</label>
+      <select id="DataSet" class="form-control" ng-model="facete.dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
+      </select>
+    </div>
+    <div class="form-group">
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Facete</a>
+    </div>
+  </form>
 
   <!-- Modal -->
-  <div class="modal fade" id="modalWindow" ng-controller="FaceteFormCtrl">
+  <div class="modal fade" id="modal" >
     <div class="modal-header">
-      <button type="button" class="close" ng-click="close('modalWindow')" aria-hidden="true">&times;</button>
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Facete</h5>
     </div>
     <div class="modal-body">
-      <ng-portlet></ng-portlet>
+      <modal-iframe></modal-iframe>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn-sm btn-success" ng-click="close('modalWindow')">Close</button>
+      <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
     </div>       
- 	</div><!-- /.modal -->
+	</div><!-- /.modal -->
 </div>
+
