--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -124,47 +124,55 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="server" class="col-lg-2 control-label">Server</label>
+            <label for="dbType" class="col-lg-2 control-label">Type</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="server" name="server" placeholder="Server" ng-model="database.server" required>
-              <div class="error"  ng-show="databaseForm.server.$dirty && databaseForm.server.$invalid">Invalid:
-                <span ng-show="databaseForm.server.$error.required">Specify a valid server</span>
+              <select id="dbType" name= "dbType" class="form-control" ng-model="database.dbType"
+                  ng-options="c.uri as c.label for c in databaseTypes" required>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="dbHost" class="col-lg-2 control-label">Host</label>
+            <div class="col-lg-10">
+              <input type="text" class="form-control" id="dbHost" name="dbHost" placeholder="dbHost" ng-model="database.dbHost" required>
+              <div class="error"  ng-show="databaseForm.dbHost.$dirty && databaseForm.dbHost.$invalid">Invalid:
+                <span ng-show="databaseForm.dbHost.$error.required">Specify a valid Host</span>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="database" class="col-lg-2 control-label">Database Name</label>
+            <label for="dbPort" class="col-lg-2 control-label">Port</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="database" database="database" placeholder="Database" ng-model="database.database" required>
-              <div class="error"  ng-show="databaseForm.database.$dirty && databaseForm.database.$invalid">Invalid:
-                <span ng-show="databaseForm.database.$error.required">Specify a valid database name</span>
+              <input type="text" class="form-control" id="dbPort" name="dbPort" placeholder="Port" ng-model="database.dbPort" required>
+              <div class="error"  ng-show="databaseForm.dbPort.$dirty && databaseForm.dbPort.$invalid">Invalid:
+                <span ng-show="databaseForm.dbPort.$error.required">Specify a valid port number</span>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="driver" class="col-lg-2 control-label">Driver</label>
+            <label for="dbName" class="col-lg-2 control-label">Database Name</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="driver" name="driver" placeholder="Driver" ng-model="database.driver" required>
-              <div class="error"  ng-show="databaseForm.driver.$dirty && databaseForm.driver.$invalid">Invalid:
-                <span ng-show="databaseForm.driver.$error.required">Specify a valid driver</span>
+              <input type="text" class="form-control" id="dbName" name="dbName" placeholder="Database" ng-model="database.dbName" required>
+              <div class="error"  ng-show="databaseForm.dbName.$dirty && databaseForm.dbName.$invalid">Invalid:
+                <span ng-show="databaseForm.dbName.$error.required">Specify a valid database name</span>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="user" class="col-lg-2 control-label">User</label>
+            <label for="dbUser" class="col-lg-2 control-label">User</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="user" name="user" placeholder="User" ng-model="database.user" required>
-              <div class="error"  ng-show="databaseForm.user.$dirty && databaseForm.user.$invalid">Invalid:
-                <span ng-show="databaseForm.user.$error.required">Specify a valid user</span>
+              <input type="text" class="form-control" id="dbUser" name="dbUser" placeholder="User" ng-model="database.dbUser" required>
+              <div class="error"  ng-show="databaseForm.dbUser.$dirty && databaseForm.dbUser.$invalid">Invalid:
+                <span ng-show="databaseForm.dbUser.$error.required">Specify a valid user</span>
               </div>
             </div>
           </div>
                 <div class="form-group">
-            <label for="password" class="col-lg-2 control-label">Password</label>
+            <label for="dbPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
-              <input type="text" class="form-control" id="password" name="password" placeholder="Password" ng-model="database.password" required>
-              <div class="error"  ng-show="databaseForm.password.$dirty && databaseForm.password.$invalid">Invalid:
-                <span ng-show="databaseForm.password.$error.required">Specify a valid password</span>
+              <input type="text" class="form-control" id="dbPassword" name="dbPassword" placeholder="Password" ng-model="database.dbPassword" required>
+              <div class="error"  ng-show="databaseForm.dbPassword.$dirty && databaseForm.dbPassword.$invalid">Invalid:
+                <span ng-show="databaseForm.dbPassword.$error.required">Specify a valid password</span>
               </div>
             </div>
           </div>
@@ -183,9 +191,10 @@
         <th>Action</th>
         <th>Uri</th>
         <th>Label</th>
-        <th>Server</th>
-        <th>Database</th>
-        <th>Driver</th>
+        <th>Type</th>
+        <th>Host</th>
+        <th>Name</th>
+        <th>Port</th>
         <th>User</th>
         <th>Password</th>
       </tr>
@@ -198,11 +207,12 @@
         </td>
         <td>{{database.uri}}</td>
         <td>{{database.label}}</td>
-        <td>{{database.server}}</td>
-        <td>{{database.database}}</td>
-        <td>{{database.driver}}</td>
-        <td>{{database.user}}</td>
-        <td>{{database.password}}</td>
+        <td>{{database.dbType}}</td>
+        <td>{{database.dbHost}}</td>
+        <td>{{database.dbName}}</td>
+        <td>{{database.dbPort}}</td>
+        <td>{{database.dbUser}}</td>
+        <td>{{database.dbPassword}}</td>
       </tr>
     </tbody>
     </table>
