--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -159,10 +159,12 @@ a.accordion-toggle:hover{
 /* Modal iframe */
 
 #mod-frame{
-	  position: absolute;
-	  top: 0;
+	  position: relative;
+	  /*top: 0;*/
 	  height: 100%;
-	  width: 97%;
+	  width: 100%;
+	  border:none;
+
 }
 
 /* Forms */
