removed Modal controller from settings modals and fix again modal position

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -159,14 +159,11 @@ a.accordion-toggle:hover{
 /* Modal iframe */
 
 #mod-frame{
-	  position: relative;
-	  /*top: 0;*/
+	  position: absolute;
+	  top: 0;
 	  height: 100%;
-	  width: 100%;
-	  border:none;
-
+	  width: 97%;
 }
-
 /* Forms */
 
 .InputForm{
