--- a/src/main/webapp/css/bootstrap-modal-bs3patch.css
+++ b/src/main/webapp/css/bootstrap-modal-bs3patch.css
@@ -15,12 +15,14 @@ body.modal-open,
 }
 
 .modal {
+/*  position: fixed;
+  padding: 0;
+  */
+  margin-left: -500px;
   left: 50%;
   bottom: auto;
-  right: auto;
-  padding: 0;
   width: 500px;
-  margin-left: -250px;
+  right: auto;
   background-color: #ffffff;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -28,6 +30,11 @@ body.modal-open,
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
+
+}
+
+.modal.fade.in {
+  top: 0px !important;
 }
 
 .modal.container {
