--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -22,7 +22,7 @@
   </form>
 
   <!-- Modal -->
-  <div class="modal fade" id="modal" >
+  <div class="modal fade" id="fullModal" >
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Facete</h5>
