--- a/src/main/webapp/partials/querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/partials/querying-and-exploration/virtuoso.html
@@ -10,7 +10,7 @@
     <a class="btn btn-primary btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch</a>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="modal">
+  <div class="modal fade" id="fullModal">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Virtuoso SPARQLEndpoint</h5>
