fix cleaning forms

--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -132,7 +132,7 @@
         <div class="form-group">
           <label for="dbHost" class="col-lg-2 control-label">Host</label>
           <div class="col-lg-10">
-            <input type="text" class="form-control" id="dbHost" name="dbHost" placeholder="dbHost" ng-model="database.dbHost" required>
+            <input type="text" class="form-control" id="dbHost" name="dbHost" placeholder="Host" ng-model="database.dbHost" required>
             <div class="error"  ng-show="databaseForm.dbHost.$dirty && databaseForm.dbHost.$invalid">Invalid:
               <span ng-show="databaseForm.dbHost.$error.required">Specify a valid Host</span>
             </div>
