--- a/src/main/webapp/partials/settings/components.html
+++ b/src/main/webapp/partials/settings/components.html
@@ -9,6 +9,7 @@
   	<th>URI</th>
     <th>Name</th>
     <th>Homepage</th>
+    <th>Services</th>
     <th>Version</th>
   </tr>
 </thead>
@@ -17,6 +18,14 @@
   	<td>{{component.uri}}</td>
     <td>{{component.label}}</td>
     <td>{{component.homepage}}</td>
+    <td>
+      <div ng-controller="ComponentServicesCtrl" ng-init="getServices(component.uri)">
+        <ul ng-repeat="service in services">
+          <li>{{service.type}}</li>
+          <li>{{service.serviceUrl}}</li>
+        </ul>
+      </div>
+    </td>
     <td>{{component.version}}</td>
   </tr>
 </tbody>
