--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -1,12 +1,12 @@
 <div class="contents" ng-controller="GeoliftCtrl">
 	<h3 class="green bold">GeoLift</h3>
-	<b>Framework to enrich geographic content in the Semantic Web</b>
+	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
 	<br>
 	<br>
-	<p>To get started either upload a configuration file or fill in the configuration options.</p>
+	<p>To get started upload a file for processing and fill in the configuration options.</p>
 	
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
-	<div id="geoliftOptions" ng-model="geolift.Options">
+	<div id="geoliftOptions">
 	<div class="row">
 		<div class="col-xs-12">
 		<h5 class="green bold">GeoLift Configuration</h5>
