--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -8,7 +8,7 @@
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
 	<div class="row">
 		<div class="col-xs-12">
-		<h5 class="green bold">Options</h5>
+		<h5 class="green bold">LIMES Configuration</h5>
 		</div>
 	</div>
 	<br>
@@ -16,7 +16,6 @@
 	<div class="row" ng-controller="ImportFormCtrl">
 			<label for="inputFile" class="col-xs-2 control-label">Upload a File</label>
 		    	<div class="col-xs-8">
-					  <!-- <input type="file" class="form-control" ng-file-select="onFileSelect($files)" > -->
 					    <input id="lefile" class="form-control input-sm" type="file" ng-file-select="loadLimesXML($files)" 
 					    		multiple name="fileName" accept=".xml" style="display:none">
 					  	<div class="error" ng-show="uploadedError()">Invalid:
@@ -247,10 +246,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-2" ng-show="showProgress">
-		<b>This might take a while...</b>
-		</div>
-		<div class="col-xs-8">
+		<div class="col-xs-12">
 		<div class="progress progress-striped active" ng-show="showProgress">
 		<div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
 		</div>
@@ -258,12 +254,9 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-2" ng-show="startReview">
-		<b>Processing complete!</b
-		></div>
-		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" id="reviewLimes" ng-show="startReview" ng-click="ReviewLimes()">Review Results</a>
-		</div>
+	<div class="col-xs-12" ng-show="showProgress">
+		<b>This might take a while... Please keep this browser window open. You can view the results here when execution is complete.</b>
+	</div>
 	</div>
 </form>
 	
